Feature/sgp migration (#62)
* regionLeader

* log

* log

* Update .gitlab-ci.yml file

* log

* threads count adjust and add task name

* config thread count in qconfig

* adjust executor core and max size

* commit

* commit

* delay monitor bug fix,operation log support query by content

* use clusterId

* spi recover

* spi recover

* commit

* ut

* ut

* test

* top10

* Feature/db replication/console

* support remove unrelatedMhas fastly

* recompile front endpoint

* dbBlacklist

* add log

* vue

* vue

* test

* add test log

* fix bug

* test log adjust

* add test log

* fix bug

* test log adjust

* vue

* reset

* add switch and remove debug log

* ut

* Feature/udl then uid release

* email

* dist

* generateEmail

* test

Change-Id: Ic3b83760401c7c153aac507983ddc5f9968f1b7f

* Feature/db replication/console

* blacklistCache

Change-Id: Iaa6ad20987089452684d38516248a33473a44ee6

* Feature/db replication/console

* 转发

Change-Id: I342c65f23631596a2e112647c6bee6ac2e04dc7b

* blacklist add expirationTime attr

* 黑名单缓存

Change-Id: Ifcc3defc4a45d96703f52ef52ed5155c3db588a5

* 过期时间

Change-Id: I50548dd44fb4002154df74c6137cc65dfa1100ac

* blacklist

Change-Id: I0daea5786cc91c01f2983a39365470d5d50e7629

* 线程池

Change-Id: I564d329e5c19fc71634fa48436cdbc59a23c0693

* cflExecutorService

Change-Id: Icfe5e13699dc208dbd80daa772f98aefa3fc1d2d

* delete gitlab-ci.yml“
“

Change-Id: Ib6c4bfb879a67f3fe9a0de3095023481735c14f6

* CM

* db replication delay table

* Feature/db replication/console

* emailGroup

Change-Id: I11e89273c4fe88ec3c7358ab8b8d4defcf617111

* Feature/db replication/console

* 缓存

Change-Id: I11b298dc0ab9e57c4b8406210932e5cd0cc5ed83

* refresh

Change-Id: If5fece640fdf8969934867f8d8c82d801a75d2b3

* query user traffic exist or not before send alter email

* getAllColumnâ

Change-Id: I0039dd4c303b846